plugins/devkit/testData/inspections/presentation/EmptyIcon.java
import com.intellij.ide.presentation.Presentation;

@Presentation(icon = "<error descr="Cannot resolve symbol ''"></error>")
public class EmptyIcon {
}